fix: add whatsapp floating icon

--- a/about.html
+++ b/about.html
@@ -114,6 +114,15 @@
       </div>
     </section>
     <!-- End page-name -->
+    <!-- Begin WhatsApp floating icon -->
+    <a
+      href="https://api.whatsapp.com/send?phone=09038290725"
+      class="whatsapp-float"
+      target="_blank"
+    >
+      <img src="./img/whatsapp.png" alt="whatsapp" />
+    </a>
+    <!-- End WhatsApp floating icon -->
     <main>
       <!-- Begin text-section -->
       <section
