--- a/index.html
+++ b/index.html
@@ -157,6 +157,15 @@
     </div>
     <!-- End main-slider -->
     <!-- <main class="pt-xs-25 pt-md-25 pt-lg-60 pb-xs-25 pb-md-25 pb-lg-60"> -->
+    <!-- Begin WhatsApp floating icon -->
+    <a
+      href="https://api.whatsapp.com/send?phone=09038290725"
+      class="whatsapp-float"
+      target="_blank"
+    >
+      <img src="./img/whatsapp.png" alt="whatsapp">
+    </a>
+    <!-- End WhatsApp floating icon -->
     <main class="pt-xs-25 pt-md-25 pt-lg-60">
       <!-- Begin text-section -->
       <section
