--- a/services.html
+++ b/services.html
@@ -114,6 +114,15 @@
       </div>
     </section>
     <!-- End page-name -->
+    <!-- Begin WhatsApp floating icon -->
+    <a
+      href="https://api.whatsapp.com/send?phone=09038290725"
+      class="whatsapp-float"
+      target="_blank"
+    >
+      <img src="./img/whatsapp.png" alt="whatsapp">
+    </a>
+    <!-- End WhatsApp floating icon -->
     <main class="pt-xs-25 pt-md-25 pt-lg-60">
       <section
         class="white-section parralax-section pb-xs-25 pb-md-25 pb-lg-60 ovh"
