--- a/testimonials.html
+++ b/testimonials.html
@@ -100,6 +100,15 @@
       </div>
     </section>
     <!-- End page-name -->
+    <!-- Begin WhatsApp floating icon -->
+    <a
+      href="https://api.whatsapp.com/send?phone=09038290725"
+      class="whatsapp-float"
+      target="_blank"
+    >
+      <img src="./img/whatsapp.png" alt="whatsapp" />
+    </a>
+    <!-- End WhatsApp floating icon -->
     <main>
       <!-- Begin latest-clients -->
       <!-- <section class="pt-xs-25 pt-md-25 pt-lg-60">
