--- a/blog.html
+++ b/blog.html
@@ -114,6 +114,15 @@
       </div>
     </section>
     <!-- End page-name -->
+    <!-- Begin WhatsApp floating icon -->
+    <a
+      href="https://api.whatsapp.com/send?phone=09038290725"
+      class="whatsapp-float"
+      target="_blank"
+    >
+      <img src="./img/whatsapp.png" alt="whatsapp" />
+    </a>
+    <!-- End WhatsApp floating icon -->
     <main>
       <div
         class="blog-posts-preview parralax-section v-separator pb-xs-25 pb-md-25 pb-lg-60"
