--- a/contact.html
+++ b/contact.html
@@ -113,6 +113,15 @@
       </div>
     </section>
     <!-- End page-name -->
+    <!-- Begin WhatsApp floating icon -->
+    <a
+      href="https://api.whatsapp.com/send?phone=09038290725"
+      class="whatsapp-float"
+      target="_blank"
+    >
+      <img src="./img/whatsapp.png" alt="whatsapp">
+    </a>
+    <!-- End WhatsApp floating icon -->
     <main class="pt-xs-25 pt-md-25 pt-lg-60">
       <section class="white-section pb-xs-20 pb-md-30 pb-lg-110">
         <div class="container">
