--- a/projects.html
+++ b/projects.html
@@ -115,6 +115,15 @@
       </div>
     </section>
     <!-- End page-name -->
+    <!-- Begin WhatsApp floating icon -->
+    <a
+      href="https://api.whatsapp.com/send?phone=09038290725"
+      class="whatsapp-float"
+      target="_blank"
+    >
+      <img src="./img/whatsapp.png" alt="whatsapp" />
+    </a>
+    <!-- End WhatsApp floating icon -->
     <main>
       <!-- Begin projects -->
       <section class="v-separator pb-xs-50 pb-md-50 pb-lg-120">
